[package]
name = "tu_beloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"	
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
regex = "1.6.0"
egui = "0.19.0"
eframe = "0.19.0"
clap = { version = "4.0.17", features = ["derive"] }
